vlib/v/checker/tests/match_expr_and_expected_type_error.vv
ch := `a`
match ch {
  'a' {}
  else {}
}

char := 123
match char {
  'a' {}
  else {}
}
